Added all the things

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div id="goobr" style="height:30px; width: 40px">
-    <a href="/" ><%= image_tag "logo.png", width: '40px' %></a>
+    <a href="/home" ><%= image_tag "logo.png", width: '40px' %></a>
   </div>
   <%= yield %>
   <div id="footer">
