--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,9 @@
 <body>  
   <center>
     <div id="main">
-      <p class="hello" style="padding-top: 22vh">We're Goobr.</p>
       <div id="inner">
-        <p>Goobr is a web application developed at PennApps XII by four Penn Students.<br>
-        Reika Yoshino, Sarah Tang, Kevin Wang, Bryan Cam.</p>
+        <p class="hello">We're Goobr.</p>
+        <iframe width="720" height="405" src="https://www.youtube.com/embed/kLoZGaGW_xw" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </center>
