--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,13 @@
 <body>
   <center>
     <div id="main">
-      <p class="hello" style="padding-top: 22vh;">Welcome Back.</p>
+      <p class="hello" style="padding-top: 22vh;">Hello, Reika.</p>
       <div id="inner">
         <a href="/schedule">
-        <button type='submit' style="width:150px"><h5>GET STARTED</h5></button>
+          <button type='submit' style="width:150px"><h5>GET STARTED</h5></button>
+        </a>
+        <a href="/planner">
+          <button type='submit' style="width:150px"><h5>PLANNER</h5></button>
         </a>
       </div>
     </div>
