--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,12 +3,11 @@
     <div id="main">
       <p class="hello" style="padding-top: 22vh">Welcome to Goobr.</p>
       <div id="inner" style="width:400px">
-        
-        <a href="/signin">
-        <div class= "button center" style="width:185px">
-        <h5>SIGN IN WITH UBER</h5></div>
+        <a href="https://login.uber.com/oauth/authorize?response_type=code&client_id=ug_7VgXIASUkNaYUofYDoJ_xqvYd680L&scope=profile">
+          <div class= "button center" style="width:185px">
+            <h5>SIGN IN WITH UBER</h5>
+          </div>
         </a>
-      </p>
       </div>
     </div>
   </center>
