--- a/app/views/pages/schedule.html.erb
+++ b/app/views/pages/schedule.html.erb
@@ -1,7 +1,7 @@
 <body>
   <center>
     <div id="main">
-      <p class="hello">Hello, Reika.</p>
+      <p class="hello">Schedule Rides</p>
       <form method="get" action="/confirm">
         <div id="inner" style="width:400px">
           <div>
@@ -20,7 +20,7 @@
               <input name="time" type="time" style="width:30%"/></p>
             <hr>
             <p>
-              <label for='repeat'>Repeat </label><input id="repeat" name="repeat" type="checkbox" style="width:initial"/>
+              <label for='repeat'>Repeat </label><input id="repeat" name="repeat" value="yes" type="checkbox" style="width:initial"/>
             </p>
             <p id='extra-options' style='display:none'>
               <label for='sun'>S</label><input id="sun" value="sun" name="days[]" type="checkbox" style="width:initial"/>
