--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,5 +1,5 @@
 body {
-  background-image: url("bg01.jpg");
+  background-image: image-url("bg01.jpg");
   background-repeat: no-repeat;
   font-family: "Genome", "Open Sans", sans-serif;
   font-size: 18px;
